# biManager

./: BinanceTask.h  CMakeLists.txt  Main.qml  README.md  app_namespaces.h  binance_manager.cpp  binance_manager.h  d_account.cpp  d_account.h  d_asset.cpp  d_asset.h  d_order.cpp  d_order.h  databasemanager.cpp  databasemanager.h  db_mapper.cpp  db_mapper.h  diaaccount.qmodel  m_account.cpp  m_account.h  main.cpp  qtquickcontrols2.conf  service_manager.cpp  service_manager.h  websocker_worker.cpp  websocker_worker.h  websocket_manager.cpp  websocket_manager.h
.github/workflows/: build_ios.yml  build_native.yml  build_windows.yml
QML/: AccountForm.qml  AccountMain.qml  Accounts.qml  App.qml  AppSelector.qml  Trade.qml  const.js
ios/: Info.plist  Launch.storyboard
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/LaunchScreen/: Launch.storyboard
